welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: not found: type color1
def faireLigne(c3: color1, c2: color2) {
                   ^FlowerPot:11: error: not found: type color2
def faireLigne(c3: color1, c2: color2) {
                               ^FlowerPot:12: error: not found: value color1
  Fleur(color1); avance(3); Fleur(color2)
        ^FlowerPot:12: error: not found: value color2
  Fleur(color1); avance(3); Fleur(color2)
                                  ^